ch7-gatekeeper-k8s/examples/validating/constraints/1-dep-labels-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: deployment-labels
  labels:
    policy.jimmyray.io/gatekeeper: constraint
spec:
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["Deployment"]
    namespaces:
      - "policy-test"
  parameters:
    allowedOps: ["CREATE","UPDATE"]
    labels: ["app","owner"]
    specTemplateLabels: ["app","env","owner"]
    errMsg: "INVALID_DEPLOYMENT_LABELS"
