ch7-gatekeeper-k8s/examples/validating/constraints/2-dep-security-context-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDepSecurityContext
metadata:
  name: deployment-security-context
  labels:
    policy.jimmyray.io/gatekeeper: constraint
spec:
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["Deployment"]
    namespaces:
      - "policy-test"
  parameters:
    allowedOps: ["CREATE","UPDATE"]
    errMsg: "INVALID_DEPLOYMENT_SECURITY_CONTEXT"
