ch7-gatekeeper-k8s/examples/validating/constraints/4-dep-allowed-role-ns-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDepRoleNs
metadata:
  name: deployment-allowed-role-ns
  labels:
    policy.jimmyray.io/gatekeeper: constraint
spec:
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["Deployment"]
    namespaces:
      - "policy-test"
  parameters:
    allowedOps: ["CREATE","UPDATE"]
    errMsg: "INVALID_DEPLOYMENT_ROLE"
