ch7-gatekeeper-k8s/examples/validating/constraints/6-dep-latest-version-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDepLatestVersion
metadata:
  name: deployment-resources
  labels:
    policy.jimmyray.io/gatekeeper: constraint
spec:
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["Deployment"]
    namespaces:
      - "policy-test"
  parameters:
    allowedOps: ["CREATE","UPDATE"]
    errMsg: "INVALID_DEPLOYMENT_LATEST_VERSION"
